[project]
name = "uv-streamlit-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
    "streamlit>=1.40.2",
    # security: pinned transitive dep of requests
    "urllib3==2.6.3",
    # security: pinned transitive dep of streamlit
    "tornado==6.5.7",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['myproject*']

[tool.uv.sources]
uv-streamlit-setup = { workspace = true }

[dependency-groups]
dev = [
    "uv-streamlit-setup",
]

[tool.pytest.ini_options]
pythonpath="src"
